Undo JDK-8245002: Windows GDI functions don't support NUMA interleaving

XMLWordPrintable

    • gc
    • b14

        JDK-8245002 was created as a workaround for problems with GDI and our NUMA interleaving. A more narrow workaround in the java2d code was then implemented and pushed for JDK-8240654. Because of this, we don't need to turn off NUMA interleaving on Windows anymore.

              Assignee:
              Stefan Karlsson
              Reporter:
              Stefan Karlsson
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: