8252368: Undo JDK-8245002: Windows GDI functions don't support NUMA interleaving

Reviewed-by: eosterlund, sjohanss